--- a/index.html
+++ b/index.html
@@ -4,6 +4,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=DM+Sans:opsz,wght@9..40,200&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=DM+Sans:opsz,wght@9..40,200&family=Delius+Unicase&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -13,7 +23,21 @@
         <li>Home</li>
         <li>About Us</li>
         <li>Information</li>
-        <li>More</li>
+        <li>
+          More
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="14"
+            height="8"
+            viewBox="0 0 14 8"
+            fill="none"
+          >
+            <path
+              d="M13.723 1.67977L7.51715 7.71128C7.44327 7.78287 7.36324 7.83346 7.27704 7.86305C7.19085 7.89312 7.0985 7.90815 7 7.90815C6.90149 7.90815 6.80915 7.89312 6.72295 7.86305C6.63676 7.83346 6.55673 7.78287 6.48285 7.71128L0.258575 1.67977C0.0861917 1.51273 0 1.30392 0 1.05336C0 0.802789 0.0923483 0.588018 0.277045 0.409041C0.461741 0.230065 0.677221 0.140577 0.923483 0.140577C1.16974 0.140577 1.38522 0.230065 1.56992 0.409041L7 5.67095L12.4301 0.409041C12.6025 0.241997 12.8147 0.158474 13.0669 0.158474C13.3196 0.158474 13.5383 0.247962 13.723 0.426939C13.9077 0.605915 14 0.814721 14 1.05336C14 1.29199 13.9077 1.5008 13.723 1.67977Z"
+              fill="white"
+            />
+          </svg>
+        </li>
       </ul>
       <div class="header-searchbar">
         <div>Search...</div>
@@ -45,13 +69,19 @@
         </svg>
       </div>
     </div>
-    <div class="dappr-container">
+    <div>
+      <div class="dappr-container">
         <img src="image 4.png" alt="programming image" srcset="" />
         <textarea name="" id="" cols="30" rows="10">
 It's not only writers who can benefit from this free online tool. If you're a programmer who's working on a ......</textarea
         >
-    </div>
-    <div class="card-list">
+        <!-- <div class="social-container">
+          <div class="social-icon-container"></div>
+          <div class="social-icon-container"></div>
+          <div class="social-icon-container"></div>
+        </div> -->
+      </div>
+      <div class="card-list">
         <div class="card c1">
           <ul>
             <li>Total Question's</li>
@@ -63,42 +93,68 @@ It's not only writers who can benefit from this free online tool. If you're a pr
             <li>Total Answer's</li>
             <li>105,000</li>
           </ul>
-
         </div>
         <div class="card c3">
           <ul>
             <li>Participated</li>
             <li>10,000</li>
           </ul>
-
         </div>
         <div class="card c4">
           <ul>
             <li>Total Passed</li>
             <li>6,000</li>
           </ul>
-
         </div>
-    </div>
-    <div class="footer-container">
-      <div class="footer-categories">
-        <div class="footer-category-container active">YOUR INFO</div>
-        <div class="footer-category-container">BOOKMARKS</div>
-        <div class="footer-category-container">SETTINGS</div>
       </div>
-      <div class="footer-text-area-container">
-        <div class="title">Your information</div>
-        <ul>
-          <li><b>Name</b> : Atul Singhal</li>
-          <li><b>Email</b> : atul@gmail.com</li>
-          <li><b>Phone</b> : 85700xxx</li>
-          <li><b>Marks</b> : 40</li>
-        </ul>
-        <button>Next
-          <svg xmlns="http://www.w3.org/2000/svg" width="40" height="24" viewBox="0 0 40 24" fill="none">
-            <path d="M39.0607 13.0607C39.6464 12.4749 39.6464 11.5251 39.0607 10.9393L29.5147 1.3934C28.9289 0.807611 27.9792 0.807611 27.3934 1.3934C26.8076 1.97919 26.8076 2.92893 27.3934 3.51472L35.8787 12L27.3934 20.4853C26.8076 21.0711 26.8076 22.0208 27.3934 22.6066C27.9792 23.1924 28.9289 23.1924 29.5147 22.6066L39.0607 13.0607ZM0 13.5H38V10.5H0L0 13.5Z" fill="white"/>
-          </svg>
-        </button>
+      <div class="bot">
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          width="80"
+          height="79"
+          viewBox="0 0 80 79"
+          fill="none"
+        >
+          <path
+            d="M66.88 50.9405C68.28 47.2837 69.04 43.3688 69.04 39.0666C69.04 35.9691 68.6 33.0006 67.84 30.2473C65.24 30.8926 62.52 31.2367 59.68 31.2367C53.8639 31.2435 48.1315 29.7461 42.9661 26.871C37.8007 23.9959 33.3537 19.8273 30 14.7166C26.4124 24.0529 19.6445 31.5629 11.08 35.711C10.92 36.7865 10.92 37.9481 10.92 39.0666C10.92 43.1739 11.6722 47.241 13.1336 51.0356C14.595 54.8303 16.737 58.2782 19.4373 61.1825C24.8909 67.0479 32.2875 70.3431 40 70.3431C44.2 70.3431 48.24 69.3536 51.88 67.5898C54.16 72.2791 55.2 74.6022 55.12 74.6022C48.56 76.9684 43.48 78.13 40 78.13C30.32 78.13 21.08 74.043 14.28 66.6863C10.144 62.2516 7.06948 56.8043 5.32 50.8114H0V31.2367H4.36C5.68097 24.3211 8.71797 17.9191 13.1488 12.71C17.5795 7.5009 23.2388 3.67903 29.5261 1.64993C35.8134 -0.379161 42.4941 -0.539793 48.8595 1.18508C55.2248 2.90996 61.0372 6.456 65.68 11.4469C70.7209 16.8472 74.1592 23.7343 75.56 31.2367H80V50.8114H79.76L65.52 64.8794L44.32 62.2981V55.1136H63.64L66.88 50.9405ZM29.08 38.0771C30.28 38.0771 31.44 38.5934 32.28 39.5399C33.1242 40.4552 33.5979 41.6923 33.5979 42.9816C33.5979 44.2709 33.1242 45.5079 32.28 46.4233C31.44 47.3267 30.28 47.843 29.08 47.843C26.56 47.843 24.52 45.6919 24.52 42.9816C24.52 40.2712 26.56 38.0771 29.08 38.0771ZM50.88 38.0771C53.4 38.0771 55.4 40.2712 55.4 42.9816C55.4 45.6919 53.4 47.843 50.88 47.843C48.36 47.843 46.32 45.6919 46.32 42.9816C46.32 41.6808 46.8004 40.4334 47.6556 39.5136C48.5108 38.5938 49.6706 38.0771 50.88 38.0771Z"
+            fill="black"
+          />
+        </svg>
+      </div>
+      <div class="footer-container">
+        <div class="footer-categories">
+          <div class="footer-category-container active">YOUR INFO</div>
+          <div class="footer-category-container">BOOKMARKS</div>
+          <div class="footer-category-container">SETTINGS</div>
+        </div>
+        <div class="footer-text-area-container">
+          <div class="title">Your information</div>
+          <ul>
+            <li>
+              <b>Name</b> &nbsp;&nbsp;&nbsp;: &nbsp;&nbsp;&nbsp;Atul Singhal
+            </li>
+            <li>
+              <b>Email</b>&nbsp;&nbsp;&nbsp; : &nbsp;&nbsp;&nbsp;atul@gmail.com
+            </li>
+            <li><b>Phone</b> &nbsp;&nbsp;&nbsp;: &nbsp;&nbsp;&nbsp;85700xxx</li>
+            <li><b>Marks</b>&nbsp;&nbsp;&nbsp; :&nbsp;&nbsp;&nbsp; 40</li>
+          </ul>
+          <button>
+            Next
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="25"
+              height="20"
+              viewBox="0 0 40 24"
+              fill="none"
+            >
+              <path
+                d="M39.0607 13.0607C39.6464 12.4749 39.6464 11.5251 39.0607 10.9393L29.5147 1.3934C28.9289 0.807611 27.9792 0.807611 27.3934 1.3934C26.8076 1.97919 26.8076 2.92893 27.3934 3.51472L35.8787 12L27.3934 20.4853C26.8076 21.0711 26.8076 22.0208 27.3934 22.6066C27.9792 23.1924 28.9289 23.1924 29.5147 22.6066L39.0607 13.0607ZM0 13.5H38V10.5H0L0 13.5Z"
+                fill="white"
+              />
+            </svg>
+          </button>
+        </div>
       </div>
     </div>
   </body>
